[package]
name = "examples"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
helium = { path = "../helium", features = ["icon-sets"]}
helium_renderer = {path = "../helium_renderer"}
ruby = {path = "../ruby"}
env_logger.workspace = true
log = "0.4.22"
tokio.workspace = true
dotenv = "0.15.0"
winit.workspace = true
image.workspace = true
reqwest = {version = "0.12.12",features = ["blocking","stream","json"]}

[[example]]
name = "counter"
path = "counter.rs"

[[example]]
name = "scroll"
path = "scroll.rs"

[[example]]
name = "bezier_curve"
path = "bezier_curve.rs"

[[example]]
name = "spotify"
path = "spotify/spotify.rs"

[[example]]
name = "sign_in"
path = "pages/sign_in.rs"

[[example]]
name = "renderer"
path = "renderer.rs"
